--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <tr>
                         <th class="contact-item">イベント名</th>
                         <td class="contact-body">
-                            <label class="contact-keitai">
+                            <label class="contact-skill">
                                 <input type="radio" id="event1" name="entry.2100736645" required="required" value="2023年2月16日（木）「手話講座」人権委員会" checked="checked"/>
                                 <span class="contact-skill-txt" id="edit_area10">2023年2月16日（木）「手話講座」人権委員会</span>
                             </label>
